--- a/cadastro.html
+++ b/cadastro.html
@@ -38,7 +38,7 @@
     </div>
 
     <ul class="hidden absolute top-1/2 right-0 transform -translate-y-1/2 -translate-x-1/2 lg:flex lg:mx-auto lg:flex lg:items-center lg:w-auto lg:space-x-6">
-        <li><a class="text-12 text-indigo-700 font-bold" href="index.html">Home</a></li>
+        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="index.html">Home</a></li>
 
         <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="alfabeto.html">Alfabeto</a></li>
 
@@ -46,7 +46,7 @@
 
         <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="contato.html">Contato</a></li>
 
-        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="cadastro.html">Cadastro</a></li>
+        <li><a class="text-12 text-indigo-700 font-bold" href="cadastro.html">Cadastro</a></li>
 
         <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="login.html">Login</a></li>
     </ul>
