--- a/alfabeto.html
+++ b/alfabeto.html
@@ -38,9 +38,9 @@
     </div>
 
     <ul class="hidden absolute top-1/2 right-0 transform -translate-y-1/2 -translate-x-1/2 lg:flex lg:mx-auto lg:flex lg:items-center lg:w-auto lg:space-x-6">
-        <li><a class="text-12 text-indigo-700 font-bold" href="index.html">Home</a></li>
+        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="index.html">Home</a></li>
 
-        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="alfabeto.html">Alfabeto</a></li>
+        <li><a class="text-12 text-indigo-700 font-bold" href="alfabeto.html">Alfabeto</a></li>
 
         <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="basico.html">Niveis</a></li>
 
