--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
     </div>
 
     <ul class="hidden absolute top-1/2 right-0 transform -translate-y-1/2 -translate-x-1/2 lg:flex lg:mx-auto lg:flex lg:items-center lg:w-auto lg:space-x-6">
-        <li><a class="text-12 text-indigo-700 font-bold" href="index.html">Home</a></li>
+        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="index.html">Home</a></li>
 
         <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="alfabeto.html">Alfabeto</a></li>
 
@@ -48,7 +48,7 @@
 
         <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="cadastro.html">Cadastro</a></li>
 
-        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="login.html">Login</a></li>
+        <li><a class="text-12 text-indigo-700 font-bold" href="login.html">Login</a></li>
     </ul>
     <a class=" lg:inline-block py-3 px-6 mr-1 bg-indigo-700 hover:bg-indigo-900 text-md text-white font-bold rounded-xl transition duration-200" href="teste.html">Faça o teste</a>
 </nav>
