--- a/contato.html
+++ b/contato.html
@@ -115,7 +115,7 @@
                 </div>
                 <div class="mb-4">
                     <label for="email-address" class="block mb-1">E-mail</label>
-                    <input type="email" name="_replyto" id="email-address" placeholder="exemplo@examplo.com" required=""
+                    <input type="email" name="_replyto" id="email-address" placeholder="exemplo@exemplo.com" required=""
                         class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-indigo-700 focus:border-indigo-600">
                 </div>
                 <div class="mb-4">
@@ -126,7 +126,7 @@
                 <div class="mb-4">
                     <label for="mensagem" class="block mb-1">Mensagem</label>
                     <textarea rows="6" name="mensagem" id="mensagem"
-                        placeholder="Utiliza este espaço para escrever sua mensagem." required=""
+                        placeholder="Utilize este espaço para escrever sua mensagem." required=""
                         class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-indigo-700 focus:border-indigo-600"></textarea>
                 </div>
                 <input type="hidden" name="_subject" id="email-subject" value="Complaint Form Submission">
