--- a/cadastro.html
+++ b/cadastro.html
@@ -157,7 +157,7 @@
 
                     <div>
                         <label class="block mb-2 text-sm text-gray-600">E-mail</label>
-                        <input type="email" placeholder="exemplo@examplo.com" class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+                        <input type="email" placeholder="exemplo@exemplo.com" class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
                     </div>
 
                     <div>
