--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@
                 <li class="mb-1">
                     <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="contato.html">Contato</a>
                 </li>
+                <li class="mb-1">
+                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="cadastro.html">Cadastro</a>
+                </li>
+                <li class="mb-1">
+                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="login.html">Login</a>
+                </li>
             </ul>
         </div>
 
@@ -108,11 +114,11 @@
       <div class="flex flex-col justify-center p-6 text-center rounded-sm lg:max-w-md xl:max-w-lg lg:text-left lg:w-2/5">
         <h1 class="text-black text-4xl font-bold leading-tight sm:text-6xl">
             <span class="text-indigo-700"> 안녕하세요! </span>
-          senectuserat pharetra
+          Bem-vindo ao Tokilingo
         </h1>
         <p class="mt-6 mb-8 text-lg sm:mb-12 text-black">
-          Dictum aliquam porta in condimentum ac integer
-          <br class="hidden md:inline lg:hidden">turpis pulvinar, est scelerisque ligula sem
+          Comece agora mesmo a aprender Coreano
+          <br class="hidden md:inline lg:hidden"> Deixe o Toki te guiar nessa jornada!
         </p>
       </div>
   
@@ -146,8 +152,8 @@
           <div class="flex flex-col w-full mb-12">
             <div class="w-full mx-auto lg:w-full">
               <h1 class="mx-auto mb-6 text-2xl font-bold text-indigo-700 lg:text-3xl text-center">A formula ideal para voce aprender uma nova lingua!</h1>
-              <p class="mx-auto lg:text-xl leading-relaxed text-gray-800 text-center mb-8">Desenvolvemos o melhor caminho para construir seu conhecimento. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Provident explicabo rerum rem.</p>
+              <p class="mx-auto lg:text-xl leading-relaxed text-gray-800 text-center mb-8">Desenvolvemos o melhor caminho para construir seu conhecimento. Do básico ao avançado, temos o plano perfeito para você. 
+                </p>
               <img class="mx-auto rounded-lg rounded-2xl shadow-xl" src="imagens/caminho.png" />
             </div>
           </div>
