--- a/intermediario.html
+++ b/intermediario.html
@@ -73,7 +73,7 @@
 
         <div> <!--parte das opcoes-->
             <ul>
-                <li class="mb-1">
+                <<li class="mb-1">
                     <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="index.html">Home</a>
                 </li>
                 <li class="mb-1">
@@ -84,6 +84,12 @@
                 </li>
                 <li class="mb-1">
                     <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="contato.html">Contato</a>
+                </li>
+                <li class="mb-1">
+                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="cadastro.html">Cadastro</a>
+                </li>
+                <li class="mb-1">
+                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="login.html">Login</a>
                 </li>
             </ul>
         </div>
