--- a/login.html
+++ b/login.html
@@ -130,7 +130,7 @@
                     <form>
                         <div>
                             <label for="email" class="block mb-2 text-sm text-gray-600 ">E-mail</label>
-                            <input type="email" name="email" id="email" placeholder="examplo@examplo.com" class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+                            <input type="email" name="email" id="email" placeholder="exemplo@exemplo.com" class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
                         </div>
 
                         <div class="mt-6">
