--- a/alfabeto.html
+++ b/alfabeto.html
@@ -265,7 +265,7 @@
                 <div class="w-full lg:w-6/12 px-4">
                     <div class="flex flex-wrap items-top mb-6">
                     <div class="w-full lg:w-4/12 px-4 ml-auto">
-                        <span class="block uppercase text-white text-sm font-semibold mb-2">Useful Links</span>
+                        <span class="block uppercase text-white text-sm font-semibold mb-2">Links</span>
                         <ul class="list-unstyled">
                         <li>
                             <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://www.creative-tim.com/presentation?ref=njs-profile">About Us</a>
