--- a/index.html
+++ b/index.html
@@ -277,9 +277,9 @@
                     <div class="flex flex-wrap text-left lg:text-left">
                     <div class="w-full lg:w-6/12 px-4">
     
-                        <h4 class="text-3xl fonat-semibold text-white">Let's keep in touch!</h4>
+                        <h4 class="text-3xl fonat-semibold text-white">Fale conosco!</h4>
                         <h5 class="text-lg mt-0 mb-2 text-white">
-                        Find us on any of these platforms, we respond 1-2 business days.
+                        Também estamos nas seguintes plataformas
                         </h5>
     
                         <div class="mt-6 lg:mb-0 mb-6">
