--- a/teste.html
+++ b/teste.html
@@ -107,38 +107,24 @@
     </nav>
 </div>
 
-<!-- component -->
-<!-- 
-    Tailwind Play Link:
-    https://play.tailwindcss.com/Iq18cgjApI 
--->
 
-
-<!-- component -->
-<div class="py-16">  
+<section class="py-24">
     <div class="container m-auto px-6 text-gray-500 md:px-12 xl:px-0">
         <div class="mx-auto lg:w-full ">
-
-
-            <h1 class="text-indigo-700 text-4xl text-center font-bold">TESTE</h1>
-            <div class="bg-white rounded-2xl shadow-xl px-8 py-12 sm:px-12 lg:px-8">
-                <div class="mb-12 space-y-4">
-                    <h3 class="text-2xl font-semibold text-indigo-700">UI Design</h3>
-                    <p class="mb-6">Obcaecati, quam? Eligendi, nulla numquam natus laborum porro at cum, consectetur ullam tempora ipsa iste officia sed officiis! Incidunt ea animi officiis.</p>
-                    <a href="#" class="block font-medium text-indigo-700">Know more</a>
-                </div>
-                <img src="https://tailus.io/sources/blocks/end-image/preview/images/ui-design.svg" class="w-2/3 ml-auto" alt="illustration" loading="lazy" width="900" height="600">
+            <h1 class="text-indigo-700 text-4xl text-center font-bold mb-10">QUIZ</h1>
+            <div class="bg-white rounded-2xl shadow-xl px-8 py-20 sm:px-12 lg:px-8" id="quiz-container">
+                <div id="question"></div>
+                <div id="options"></div>
+                <button id="next-btn" class="bg-indigo-500 text-white px-4 py-2 mt-4 rounded-md">Próxima pergunta</button>
             </div>
-
-
-
         </div>
     </div>
-</div>
+</section>
 
 
 
-<svg id="visual" viewBox="0 0 3000 200" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" class="left-0" style="margin-bottom: -3px;" >
+
+<svg id="visual" viewBox="0 0 3000 200" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" class="left-0 mt-14" style="margin-bottom: -3px;" >
     <path d="M0 76L31.3 71.2C62.7 66.3 125.3 56.7 187.8 51.5C250.3 
     46.3 312.7 45.7 375.2 52C437.7 58.3 500.3 71.7 562.8 79.5C625.3 87.3 687.7 89.7 750.2 89.3C812.7 89 875.3 86 937.8 81C1000.3 76 1062.7 69 1125.2 59.7C1187.7 50.3 1250.3 38.7 1312.8 35C1375.3 31.3 
     1437.7 35.7 1500.2 35.5C1562.7 35.3 1625.3 30.7 1687.8 39.7C1750.3 48.7 1812.7 71.3 1875.2 80C1937.7 88.7 2000.3 83.3 2062.8 76.2C2125.3 69 2187.7 60 2250.2 53.7C2312.7 47.3 2375.3 43.7 2437.8 50.2C2500.3 
@@ -162,9 +148,9 @@
                 <div class="flex flex-wrap text-left lg:text-left">
                 <div class="w-full lg:w-6/12 px-4">
 
-                    <h4 class="text-3xl fonat-semibold text-white">Let's keep in touch!</h4>
+                    <h4 class="text-3xl fonat-semibold text-white">Fale conosco!</h4>
                     <h5 class="text-lg mt-0 mb-2 text-white">
-                    Find us on any of these platforms, we respond 1-2 business days.
+                    Também estamos nas seguintes plataformas
                     </h5>
 
                     <div class="mt-6 lg:mb-0 mb-6">
@@ -183,10 +169,10 @@
                 <div class="w-full lg:w-6/12 px-4">
                     <div class="flex flex-wrap items-top mb-6">
                     <div class="w-full lg:w-4/12 px-4 ml-auto">
-                        <span class="block uppercase text-white text-sm font-semibold mb-2">Useful Links</span>
+                        <span class="block uppercase text-white text-sm font-semibold mb-2">Links</span>
                         <ul class="list-unstyled">
                         <li>
-                            <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://www.creative-tim.com/presentation?ref=njs-profile">About Us</a>
+                            <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://www.creative-tim.com/presentation?ref=njs-profile">Sobre nós</a>
                         </li>
                         <li>
                             <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://blog.creative-tim.com?ref=njs-profile">Blog</a>
@@ -200,7 +186,7 @@
                         </ul>
                     </div>
                     <div class="w-full lg:w-4/12 px-4">
-                        <span class="block uppercase text-white text-sm font-semibold mb-2">Other Resources</span>
+                        <span class="block uppercase text-white text-sm font-semibold mb-2">Outros Recursos</span>
                         <ul class="list-unstyled">
                         <li>
                             <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://github.com/creativetimofficial/notus-js/blob/main/LICENSE.md?ref=njs-profile">MIT License</a>
@@ -212,7 +198,7 @@
                             <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://creative-tim.com/privacy?ref=njs-profile">Privacy Policy</a>
                         </li>
                         <li>
-                            <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://creative-tim.com/contact-us?ref=njs-profile">Contact Us</a>
+                            <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="contato.html">Nos contate</a>
                         </li>
                         </ul>
                     </div>
@@ -230,6 +216,5 @@
                 </div>
             </div>
         </footer>
-
-    </body>
+</body>
 </html>
