--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
         </p>
       </div>
   
-      <div class="flex items-center justify-center p-6 mt-8 lg:mt-0 lg:w-2/5">
-        <img src="imagens/tokitoki.png" alt="" class="object-contain max-w-full h-auto">
+      <div class="flex items-center justify-center p-8 mt-8 lg:mt-0 lg:w-2/5">
+        <img src="imagens/tokitokis.png" alt="" class="object-contain max-w-full h-auto">
       </div>
   
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="absolute bottom-0 left-0 w-full" style="margin-bottom: -1px;">
