--- a/teste.html
+++ b/teste.html
@@ -85,12 +85,7 @@
                 <li class="mb-1">
                     <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="contato.html">Contato</a>
                 </li>
-                <li class="mb-1">
-                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="cadastro.html">Cadastro</a>
-                </li>
-                <li class="mb-1">
-                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="login.html">Login</a>
-                </li>
+
             </ul>
         </div>
 
@@ -148,9 +143,9 @@
                 <div class="flex flex-wrap text-left lg:text-left">
                 <div class="w-full lg:w-6/12 px-4">
 
-                    <h4 class="text-3xl fonat-semibold text-white">Fale conosco!</h4>
+                    <h4 class="text-3xl fonat-semibold text-white">Let's keep in touch!</h4>
                     <h5 class="text-lg mt-0 mb-2 text-white">
-                    Também estamos nas seguintes plataformas
+                    Find us on any of these platforms, we respond 1-2 business days.
                     </h5>
 
                     <div class="mt-6 lg:mb-0 mb-6">
@@ -169,10 +164,10 @@
                 <div class="w-full lg:w-6/12 px-4">
                     <div class="flex flex-wrap items-top mb-6">
                     <div class="w-full lg:w-4/12 px-4 ml-auto">
-                        <span class="block uppercase text-white text-sm font-semibold mb-2">Links</span>
+                        <span class="block uppercase text-white text-sm font-semibold mb-2">Useful Links</span>
                         <ul class="list-unstyled">
                         <li>
-                            <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://www.creative-tim.com/presentation?ref=njs-profile">Sobre nós</a>
+                            <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://www.creative-tim.com/presentation?ref=njs-profile">About Us</a>
                         </li>
                         <li>
                             <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://blog.creative-tim.com?ref=njs-profile">Blog</a>
@@ -186,7 +181,7 @@
                         </ul>
                     </div>
                     <div class="w-full lg:w-4/12 px-4">
-                        <span class="block uppercase text-white text-sm font-semibold mb-2">Outros Recursos</span>
+                        <span class="block uppercase text-white text-sm font-semibold mb-2">Other Resources</span>
                         <ul class="list-unstyled">
                         <li>
                             <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://github.com/creativetimofficial/notus-js/blob/main/LICENSE.md?ref=njs-profile">MIT License</a>
@@ -198,7 +193,7 @@
                             <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://creative-tim.com/privacy?ref=njs-profile">Privacy Policy</a>
                         </li>
                         <li>
-                            <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="contato.html">Nos contate</a>
+                            <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://creative-tim.com/contact-us?ref=njs-profile">Contact Us</a>
                         </li>
                         </ul>
                     </div>
@@ -216,5 +211,6 @@
                 </div>
             </div>
         </footer>
-</body>
+
+    </body>
 </html>
