--- a/contato.html
+++ b/contato.html
@@ -160,7 +160,9 @@
                     <div class="flex flex-wrap text-left lg:text-left">
                     <div class="w-full lg:w-6/12 px-4">
     
-                        <h4 class="text-3xl fonat-semibold text-white">Fale conosco!</h4>
+                        <div class="mr-auto text-3xl font-bold leading-none">
+                            <img src="imagens/logotokibranca.png" alt="logo"  class="h-28">
+                        </div>
                         <h5 class="text-lg mt-0 mb-2 text-white">
                         Também estamos nas seguintes plataformas
                         </h5>
