--- a/teste.html
+++ b/teste.html
@@ -143,9 +143,11 @@
                 <div class="flex flex-wrap text-left lg:text-left">
                 <div class="w-full lg:w-6/12 px-4">
 
-                    <h4 class="text-3xl fonat-semibold text-white">Let's keep in touch!</h4>
+                    <div class="mr-auto text-3xl font-bold leading-none">
+                        <img src="imagens/logotokibranca.png" alt="logo"  class="h-28">
+                    </div>
                     <h5 class="text-lg mt-0 mb-2 text-white">
-                    Find us on any of these platforms, we respond 1-2 business days.
+                    Também estamos nas seguintes plataformas
                     </h5>
 
                     <div class="mt-6 lg:mb-0 mb-6">
@@ -164,10 +166,10 @@
                 <div class="w-full lg:w-6/12 px-4">
                     <div class="flex flex-wrap items-top mb-6">
                     <div class="w-full lg:w-4/12 px-4 ml-auto">
-                        <span class="block uppercase text-white text-sm font-semibold mb-2">Useful Links</span>
+                        <span class="block uppercase text-white text-sm font-semibold mb-2">Links</span>
                         <ul class="list-unstyled">
                         <li>
-                            <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://www.creative-tim.com/presentation?ref=njs-profile">About Us</a>
+                            <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://www.creative-tim.com/presentation?ref=njs-profile">Sobre nós</a>
                         </li>
                         <li>
                             <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://blog.creative-tim.com?ref=njs-profile">Blog</a>
@@ -181,7 +183,7 @@
                         </ul>
                     </div>
                     <div class="w-full lg:w-4/12 px-4">
-                        <span class="block uppercase text-white text-sm font-semibold mb-2">Other Resources</span>
+                        <span class="block uppercase text-white text-sm font-semibold mb-2">Outros Recursos</span>
                         <ul class="list-unstyled">
                         <li>
                             <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://github.com/creativetimofficial/notus-js/blob/main/LICENSE.md?ref=njs-profile">MIT License</a>
@@ -193,7 +195,7 @@
                             <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://creative-tim.com/privacy?ref=njs-profile">Privacy Policy</a>
                         </li>
                         <li>
-                            <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://creative-tim.com/contact-us?ref=njs-profile">Contact Us</a>
+                            <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="contato.html">Nos contate</a>
                         </li>
                         </ul>
                     </div>
