--- a/avancado.html
+++ b/avancado.html
@@ -118,6 +118,13 @@
         </div>    
       </div>  
     </div>
+
+    <div class="flex justify-center mt-4">
+        <a href="basico.html" class="bg-indigo-400 hover:bg-indigo-300 text-white font-bold py-2 px-4 rounded mr-2">Básico</a>
+        <a href="intermediario.html" class="bg-indigo-500 hover:bg-indigo-400 text-white font-bold py-2 px-4 rounded mr-2">Intermediário</a>
+        <a href="#" class="bg-indigo-700 hover:bg-indigo-600 text-white font-bold py-2 px-4 rounded">Avançado</a>
+      </div>
+
     <svg id="visual" viewBox="0 0 3000 200" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" class="left-0" style="margin-bottom: -3px;" >
         <path d="M0 76L31.3 71.2C62.7 66.3 125.3 56.7 187.8 51.5C250.3 
         46.3 312.7 45.7 375.2 52C437.7 58.3 500.3 71.7 562.8 79.5C625.3 87.3 687.7 89.7 750.2 89.3C812.7 89 875.3 86 937.8 81C1000.3 76 1062.7 69 1125.2 59.7C1187.7 50.3 1250.3 38.7 1312.8 35C1375.3 31.3 
