--- a/basico.html
+++ b/basico.html
@@ -104,20 +104,32 @@
 
 <!-- TIMELINE -->
 <section class="flex flex-col items-center justify-center">
-    <h1 class="mx-auto mb-6 text-2xl font-bold text-indigo-700 lg:text-3xl text-center">BASICO</h1>   
+    <h1 class="mx-auto mb-6 text-2xl font-bold text-indigo-300 lg:text-3xl text-center">BÁSICO</h1>   
     <div class="flex-col items-center">
       <div class="timeline">
         <div class="line"></div>
         <div class="flex flex-col items-center">
-          <a href="embreve.html" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">1</a>
-          <a href="embreve.html" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">2</a>
-          <a href="embreve.html" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">3</a>
-          <a href="embreve.html" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">4</a>
-          <a href="embreve.html" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">5</a>
-          <a href="embreve.html" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">6</a>          
+          <a href="embreve.html" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-400 hover:bg-indigo-300 text-white text-center shadow-custom">1</a>
+          <a href="embreve.html" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-400 hover:bg-indigo-300 text-white text-center shadow-custom">2</a>
+          <a href="embreve.html" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-400 hover:bg-indigo-300 text-white text-center shadow-custom">3</a>
+          <a href="embreve.html" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-400 hover:bg-indigo-300 text-white text-center shadow-custom">4</a>
+          <a href="embreve.html" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-400 hover:bg-indigo-300 text-white text-center shadow-custom">5</a>
+          <a href="embreve.html" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-400 hover:bg-indigo-300 text-white text-center shadow-custom">6</a>          
         </div>    
       </div>  
     </div>
+
+    <div class="flex justify-center mt-4">
+        <a href="#" class="bg-indigo-400 hover:bg-indigo-300 text-white font-bold py-2 px-4 rounded mr-2">Básico</a>
+        <a href="intermediario.html" class="bg-indigo-500 hover:bg-indigo-400 text-white font-bold py-2 px-4 rounded mr-2">Intermediário</a>
+        <a href="avancado.html" class="bg-indigo-700 hover:bg-indigo-600 text-white font-bold py-2 px-4 rounded">Avançado</a>
+      </div>
+      
+  
+
+
+
+
     <svg id="visual" viewBox="0 0 3000 200" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" class="left-0" style="margin-bottom: -3px;" >
         <path d="M0 76L31.3 71.2C62.7 66.3 125.3 56.7 187.8 51.5C250.3 
         46.3 312.7 45.7 375.2 52C437.7 58.3 500.3 71.7 562.8 79.5C625.3 87.3 687.7 89.7 750.2 89.3C812.7 89 875.3 86 937.8 81C1000.3 76 1062.7 69 1125.2 59.7C1187.7 50.3 1250.3 38.7 1312.8 35C1375.3 31.3 
@@ -136,9 +148,9 @@
         150.7 2625.2 146.2C2687.7 141.7 2750.3 142.3 2812.8 140.3C2875.3 138.3 2937.7 133.7 2968.8 131.3L3000 129L3000 201L2968.8 201C2937.7 201 2875.3 201 2812.8 201C2750.3 201 2687.7 201 2625.2 201C2562.7 201 2500.3 201 2437.8 201C2375.3 
         201 2312.7 201 2250.2 201C2187.7 201 2125.3 201 2062.8 201C2000.3 201 1937.7 201 1875.2 201C1812.7 201 1750.3 201 1687.8 201C1625.3 201 1562.7 201 1500.2 201C1437.7 201 1375.3 201 1312.8 201C1250.3 201 1187.7 201 1125.2 201C1062.7 
         201 1000.3 201 937.8 201C875.3 201 812.7 201 750.2 201C687.7 201 625.3 201 562.8 201C500.3 201 437.7 201 375.2 201C312.7 201 250.3 201 187.8 201C125.3 201 62.7 201 31.3 201L0 201Z" fill="#232a84"></path></svg>
-  </section>
-  
 
+  
+</section>
 
 
         <footer class="relative bg-232a84 pt-14 pb-20">
