--- a/intermediario.html
+++ b/intermediario.html
@@ -73,7 +73,7 @@
 
         <div> <!--parte das opcoes-->
             <ul>
-                <<li class="mb-1">
+                <li class="mb-1">
                     <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="index.html">Home</a>
                 </li>
                 <li class="mb-1">
@@ -104,20 +104,28 @@
 
 <!-- TIMELINE -->
 <section class="flex flex-col items-center justify-center">
-    <h1 class="mx-auto mb-6 text-2xl font-bold text-indigo-700 lg:text-3xl text-center">INTERMEDIARIO</h1>   
+    <h1 class="mx-auto mb-6 text-2xl font-bold text-indigo-500 lg:text-3xl text-center">INTERMEDIARIO</h1>   
     <div class="flex-col items-center">
       <div class="timeline">
         <div class="line"></div>
         <div class="flex flex-col items-center">
-          <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">1</a>
-          <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">2</a>
-          <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">3</a>
-          <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">4</a>
-          <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">5</a>
-          <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">6</a>          
+          <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-500 hover:bg-indigo-400 text-white text-center shadow-custom">1</a>
+          <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-500 hover:bg-indigo-400 text-white text-center shadow-custom">2</a>
+          <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-500 hover:bg-indigo-400 text-white text-center shadow-custom">3</a>
+          <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-500 hover:bg-indigo-400 text-white text-center shadow-custom">4</a>
+          <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-500 hover:bg-indigo-400 text-white text-center shadow-custom">5</a>
+          <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-500 hover:bg-indigo-400 text-white text-center shadow-custom">6</a>          
         </div>    
       </div>  
     </div>
+
+    <div class="flex justify-center mt-4">
+        <a href="basico.html" class="bg-indigo-400 hover:bg-indigo-300 text-white font-bold py-2 px-4 rounded mr-2">Básico</a>
+        <a href="#" class="bg-indigo-500 hover:bg-indigo-400 text-white font-bold py-2 px-4 rounded mr-2">Intermediário</a>
+        <a href="avancado.html" class="bg-indigo-700 hover:bg-indigo-600 text-white font-bold py-2 px-4 rounded">Avançado</a>
+      </div>
+
+
     <svg id="visual" viewBox="0 0 3000 200" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" class="left-0" style="margin-bottom: -3px;" >
         <path d="M0 76L31.3 71.2C62.7 66.3 125.3 56.7 187.8 51.5C250.3 
         46.3 312.7 45.7 375.2 52C437.7 58.3 500.3 71.7 562.8 79.5C625.3 87.3 687.7 89.7 750.2 89.3C812.7 89 875.3 86 937.8 81C1000.3 76 1062.7 69 1125.2 59.7C1187.7 50.3 1250.3 38.7 1312.8 35C1375.3 31.3 
