sem links no footer

--- a/contato.html
+++ b/contato.html
@@ -186,30 +186,25 @@
                             <span class="block uppercase text-white text-sm font-semibold mb-2">Links</span>
                             <ul class="list-unstyled">
                             <li>
-                                <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://www.creative-tim.com/presentation?ref=njs-profile">Sobre nós</a>
+                                <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="">Sobre nós</a>
                             </li>
                             <li>
-                                <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://blog.creative-tim.com?ref=njs-profile">Blog</a>
+                                <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="">Blog</a>
                             </li>
                             <li>
-                                <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://www.github.com/creativetimofficial?ref=njs-profile">Github</a>
+                                <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="">Github</a>
                             </li>
-                            <li>
-                                <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://www.creative-tim.com/bootstrap-themes/free?ref=njs-profile">Free Products</a>
-                            </li>
+
                             </ul>
                         </div>
                         <div class="w-full lg:w-4/12 px-4">
                             <span class="block uppercase text-white text-sm font-semibold mb-2">Outros Recursos</span>
                             <ul class="list-unstyled">
                             <li>
-                                <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://github.com/creativetimofficial/notus-js/blob/main/LICENSE.md?ref=njs-profile">MIT License</a>
+                                <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="">Terms &amp; Conditions</a>
                             </li>
                             <li>
-                                <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://creative-tim.com/terms?ref=njs-profile">Terms &amp; Conditions</a>
-                            </li>
-                            <li>
-                                <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://creative-tim.com/privacy?ref=njs-profile">Privacy Policy</a>
+                                <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="">Privacy Policy</a>
                             </li>
                             <li>
                                 <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="contato.html">Nos contate</a>
@@ -230,5 +225,7 @@
                     </div>
                 </div>
             </footer>
+
+              
     </body>
 </html>
