add link em breve

--- a/avancado.html
+++ b/avancado.html
@@ -104,17 +104,17 @@
 
 <!-- TIMELINE -->
 <section class="flex flex-col items-center justify-center">
-    <h1 class="mx-auto mb-6 text-2xl font-bold text-indigo-700 lg:text-3xl text-center">AVANCADO</h1>   
+    <h1 class="mx-auto mb-6 text-2xl font-bold text-indigo-700 lg:text-3xl text-center">AVANÇADO</h1>   
     <div class="flex-col items-center">
       <div class="timeline">
         <div class="line"></div>
         <div class="flex flex-col items-center">
-          <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">1</a>
-          <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">2</a>
-          <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">3</a>
-          <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">4</a>
-          <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">5</a>
-          <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">6</a>          
+          <a href="embreve.html" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">1</a>
+          <a href="embreve.html" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">2</a>
+          <a href="embreve.html" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">3</a>
+          <a href="embreve.html" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">4</a>
+          <a href="embreve.html" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">5</a>
+          <a href="embreve.html" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">6</a>          
         </div>    
       </div>  
     </div>
