--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   </svg>
     </section>
     <!-- explica os caminhos -->
-    <section class="container mx-auto px-5 flex justify-center">
+    <section class="container mx-auto px-5 flex justify-center mb-0">
         <div class="flex flex-col items-center py-8">
           <div class="flex flex-col w-full mb-12">
             <div class="w-full mx-auto lg:w-full">
