--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       <div class="mx-auto grid gap-6 md:w-3/4 lg:w-full lg:grid-cols-3">
 
         <div class="px-8 py-12 sm:px-12 lg:px-8">
-          <div class="mb-12 space-y-4">
+          <div class="sm:mb-8 mb-12 space-y-4">
             <h3 class="text-3xl font-bold text-indigo-700">Faça o teste agora e descubra o
                 ponto de partida da sua jornada!</h3>
             <p class="mb-6">O teste fará um nivelamento dos seus conhecimentos em Coreano, sendo a ferramenta perfeita para indicar o ponto inicial dos seus estudos.</p>
