arrumei link teste

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 </li>
             </div>
 
-            <a href="#" class="block w-full px-4 py-2 text-center text-white bg-indigo-700 hover:bg-indigo-600 rounded-md font-medium">Faça o teste!</a>
+            <a href="teste.html" class="block w-full px-4 py-2 text-center text-white bg-indigo-700 hover:bg-indigo-600 rounded-md font-medium">Faça o teste!</a>
         </div>
         </div>
 
